force-app/main/default/objects/TVA_CO__Link_Tracking__c/TVA_CO__Link_Tracking__c.object-meta.xml
<CustomObject>
    <label>Link Tracking</label>
    <nameField>
        <displayFormat>LT - {00000}</displayFormat>
        <label>Link Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>