force-app/main/default/objects/TVA_CO__Link_Tracking__c/fields/TVA_CO__Count__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>