force-app/main/default/objects/TVA_CO__Link_Tracking__c/fields/TVA_CO__Email_Message__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Message</label>
    <referenceTo>TVA_CO__Email_Message__c</referenceTo>
    <relationshipLabel>Link Tracking</relationshipLabel>
    <relationshipName>Link_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>