force-app/main/default/objects/TVA_CO__Link_Tracking__c/fields/TVA_CO__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__UniqueId__c</fullName>
    <label>Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>